--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-html-replace": "^1.5.5",
     "gulp-react": "^3.1.0",
+    "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
     "morgan": "^1.7.0"
   }
