--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-react": "^3.1.0",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "socket.io": "^1.4.5"
   }
 }
