--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "aws-sdk": "^2.2.42",
     "body-parser": "^1.15.0",
+    "chai": "^3.5.0",
     "express": "^4.13.4",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
@@ -27,6 +28,7 @@
     "gulp-react": "^3.1.0",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
+    "mocha": "^2.4.5",
     "morgan": "^1.7.0",
     "socket.io": "^1.4.5"
   }
