--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "mocha": "^2.4.5",
     "morgan": "^1.7.0",
     "request": "^2.69.0",
+    "react": "^0.14.7",
+    "react-addons-test-utils": "^0.14.7",
     "socket.io": "^1.4.5"
   },
   "devDependencies": {
