--- a/package.json
+++ b/package.json
@@ -31,5 +31,11 @@
     "mocha": "^2.4.5",
     "morgan": "^1.7.0",
     "socket.io": "^1.4.5"
+  },
+  "devDependencies": {
+    "jest": "^0.1.40",
+    "react": "^0.14.7",
+    "react-addons-test-utils": "^0.14.7",
+    "react-dom": "^0.14.7"
   }
 }
