--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-uglify": "^1.5.3",
     "mocha": "^2.4.5",
     "morgan": "^1.7.0",
+    "request": "^2.69.0",
     "socket.io": "^1.4.5"
   },
   "devDependencies": {
