--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "gulp-react": "^3.1.0",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
+    "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
     "morgan": "^1.7.0",
-    "request": "^2.69.0",
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
+    "request": "^2.69.0",
     "socket.io": "^1.4.5"
   },
   "devDependencies": {
