(feat) adds password hashing and comparison

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/MThorsell/thesis#readme",
   "dependencies": {
     "aws-sdk": "^2.2.42",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "chai": "^3.5.0",
     "express": "^4.13.4",
