--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
     "jsdom": "^8.1.0",
+    "jsonwebtoken": "^5.7.0",
     "mocha": "^2.4.5",
     "morgan": "^1.7.0",
+    "node-env-file": "^0.1.8",
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "request": "^2.69.0",
