--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-uglify": "^1.5.3",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
+    "mocha-phantomjs": "^4.0.2",
     "morgan": "^1.7.0",
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
