--- a/_.travis.yml
+++ b/_.travis.yml
@@ -1,4 +1,10 @@
 language: node_js
 node_js:
+  - '5'
+  - '4'
   - '0.8'
   - '0.10'
+  - '0.12'
+before_script:
+  - npm install -g gulp
+script: gulp
