--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ node_js:
   - '5'
 before_script:
   - npm install -g gulp
-script: gulp travis && phantomjs ./tests/reactTests.html
+script: npm test
