--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "test",
+    "test": "gulp buildTest && ./node_modules/mocha-phantomjs/bin/mocha-phantomjs ./tests/reactTests.html && exit 1",
     "start": "nodemon server/server.js"
   },
+  "pre-commit": ["test"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MThorsell/thesis.git"
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "jest": "^0.1.40",
+    "pre-commit": "^1.1.2",
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7"
