--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "aws-sdk": "^2.2.42",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
+    "bower": "1.7.7",
     "chai": "^3.5.0",
     "express": "^4.13.4",
     "gulp": "^3.9.1",
