--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "gulp buildTest && ./node_modules/mocha-phantomjs/bin/mocha-phantomjs ./tests/reactTests.html",
-    "start": "nodemon server/server.js"
+    "start": "nodemon server/server.js",
+    "test": "gulp buildTest && mocha tests/serverTests.js && node node_modules/mocha-phantomjs/bin/mocha-phantomjs ./tests/reactTests.html"
   },
   "pre-commit": ["test"],
   "repository": {
