--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ before_script:
   - java -Djava.library.path=/tmp/DynamoDBLocal_lib -jar /tmp/DynamoDBLocal.jar -inMemory &
   - sleep 2
   - node db/db.js
+  - npm start
 script: npm test
+after_script: 
+  - killall -KILL node
 addons:
   hosts:
     - dynamodb-local
