--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
   - npm start
 script: npm test
 env:
-  - secret="sadflskdafjsadfsdasdfjksghadbmnaddbrjksdhafklsdjaflsaflkhsdfsdf"
+  - .env
 after_script: 
   - killall -KILL node
 addons:
