(chore) adds engine to package.json

--- a/package.json
+++ b/package.json
@@ -48,5 +48,6 @@
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7"
-  }
+  },
+  "engine": "node 5.5.0"
 }
