--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,19 @@
+enable sudo: required
 language: node_js
 node_js:
   - '5.5.0'
+before_install:
+   - echo "Installing libvips..."
+   - sudo add-apt-repository -y ppa:lovell/precise-backport-vips
+   - sudo apt-get update
+   - sudo apt-get install -y libvips-dev
+   - echo "Completed libvips installation."
 before_script:
   - bower install
   - wget http://dynamodb-local.s3-website-us-west-2.amazonaws.com/dynamodb_local_latest.tar.gz -O /tmp/dynamodb_local_latest.tar.gz
   - tar -xzf /tmp/dynamodb_local_latest.tar.gz -C /tmp
   - java -Djava.library.path=/tmp/DynamoDBLocal_lib -jar /tmp/DynamoDBLocal.jar -inMemory &
   - sleep 2
-  - curl -s https://raw.githubusercontent.com/lovell/sharp/master/preinstall.sh | sudo bash -
   - node db/db.js
   - npm install -g nodemon
   - npm start &
