--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: node_js
 node_js:
   - '5.5.0'
 before_install:
+   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+   - sudo apt-get update -q
+   - sudo apt-get install gcc-4.8 -y
    - echo "Installing libvips..."
    - sudo add-apt-repository -y ppa:lovell/precise-backport-vips
    - sudo apt-get update
