--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server/server.js",
-    "test": "mocha tests/testServer.js && gulp buildTest && node node_modules/mocha-phantomjs/bin/mocha-phantomjs ./tests/reactTests.html",
-    "preinstall" : "npm install sharp"
+    "test": "mocha tests/testServer.js && gulp buildTest && node node_modules/mocha-phantomjs/bin/mocha-phantomjs ./tests/reactTests.html"
   },
   "pre-commit": [
     "test"
@@ -50,5 +49,6 @@
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7"
-  }
+  },
+  "engine": "node 5.5.0"
 }
